feat: Update personal details, skills, contact information, and social links.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Header / Navigation -->
     <header>
         <div class="nav-container">
-            <a href="#" class="logo">PORTFOLIO<span style="color:var(--primary)">.</span></a>
+            <a href="#" class="logo">AMISU USMAN<span style="color:var(--primary)">.</span></a>
 
             <ul class="nav-links">
                 <li><a href="#home" class="active">Home</a></li>
@@ -52,7 +52,7 @@
         <section id="home" class="hero container">
             <div class="hero-content">
                 <div class="hero-text" data-aos="fade-right">
-                    <span class="hero-subtitle">Hello, I'm a Developer</span>
+                    <span class="hero-subtitle">Hello, I'm a Full Stack Developer</span>
                     <h1>Building Digital <br><span class="text-gradient">Experiences</span> That Matter.</h1>
                     <p>I design and build interactive, accessible, and beautiful web applications. Focused on user
                         experience and clean code.</p>
@@ -127,13 +127,13 @@
                 </div>
                 <!-- Skill 3 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="200">
-                    <i class="fab fa-react"></i>
-                    <h4>React</h4>
+                    <i class="fab fa-cc-visa"></i>
+                    <h4>Canva Affinity Designer</h4>
                 </div>
                 <!-- Skill 4 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="250">
                     <i class="fab fa-node-js"></i>
-                    <h4>Node.js</h4>
+                    <h4>Node.js & Express.js</h4>
                 </div>
                 <!-- Skill 5 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="300">
@@ -238,14 +238,21 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <span>hello@example.com</span>
+                            <a href="mailto:amisuusman@gmail.com">amisuusman@gmail.com</a>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-phone"></i>
+                        <div>
+                            <h4>Phone</h4>
+                            <a href="tel:+2348057417398">+2348057417398</a>
                         </div>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Location</h4>
-                            <span>New York, USA</span>
+                            <span>Lagos, Nigeria</span>
                         </div>
                     </div>
                 </div>
@@ -271,16 +278,15 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <a href="#" class="logo">PORTFOLIO.</a>
+            <a href="#" class="logo">AMISU USMAN.</a>
 
             <div class="footer-socials">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
+                <a href="https://x.com/AmisuUsman"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/celionatti"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/amisu-usman"><i class="fab fa-linkedin-in"></i></a>
             </div>
 
-            <p class="copyright">© 2025 Portfolio. All rights reserved.</p>
+            <p class="copyright">© 2025 Amisu Usman(Celio Natti). All rights reserved.</p>
         </div>
     </footer>
 
