feat: Revise portfolio content across hero, about, skills, projects, and contact sections.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
         <section id="home" class="hero container">
             <div class="hero-content">
                 <div class="hero-text" data-aos="fade-right">
-                    <span class="hero-subtitle">Hello, I'm a Full Stack Developer</span>
-                    <h1>Building Digital <br><span class="text-gradient">Experiences</span> That Matter.</h1>
-                    <p>I design and build interactive, accessible, and beautiful web applications. Focused on user
-                        experience and clean code.</p>
+                    <span class="hero-subtitle">Hi, I’m Amisu Usman — Full Stack Web Developer</span>
+                    <h1>I Build Scalable <br>
+                        <span class="text-gradient">Web Products</span> That Actually Work.
+                    </h1>
+                    <p>
+                        I design and develop modern web applications with clean UI, solid backend logic, and real-world
+                        use cases.
+                        From PHP-based platforms to JavaScript-driven interfaces, I focus on performance, security, and
+                        user experience.
+                    </p>
                     <div class="hero-btns">
                         <a href="#projects" class="btn">View Work</a>
                         <a href="#contact" class="btn btn-outline">Contact Me</a>
@@ -83,24 +89,32 @@
                         alt="Working">
                 </div>
                 <div class="about-text" data-aos="fade-left">
-                    <h3>Passionate about creating purposeful web solutions.</h3>
-                    <p>I am a Full Stack Developer with a keen eye for design. I bridge the gap between engineering and
-                        aesthetics to build products that not only work properly but also look amazing.</p>
-                    <p>With 5 years of experience, I've worked with various technologies and clients, helping them
-                        transform their ideas into reality.</p>
+                    <h3>Building solutions, not just websites.</h3>
+                    <p>
+                        I’m a self-taught Full Stack Developer with over 5 years of hands-on experience building and
+                        maintaining web applications.
+                        My journey started with curiosity and turned into a career focused on solving real problems with
+                        clean, efficient code.
+                    </p>
+                    <p>
+                        I specialize in PHP, JavaScript, and modern frontend frameworks like React and Vue.
+                        Beyond coding, I understand business needs, client communication, and how technology drives
+                        growth —
+                        thanks to my experience in freelancing, team leadership, and operations management.
+                    </p>
 
                     <div class="stats">
                         <div class="stat-item">
-                            <h4>50+</h4>
-                            <span>Projects</span>
-                        </div>
-                        <div class="stat-item">
                             <h4>30+</h4>
-                            <span>Clients</span>
+                            <span>Completed Projects</span>
                         </div>
                         <div class="stat-item">
-                            <h4>5</h4>
-                            <span>Years Exp.</span>
+                            <h4>10+</h4>
+                            <span>Happy Clients</span>
+                        </div>
+                        <div class="stat-item">
+                            <h4>5+</h4>
+                            <span>Years Experience</span>
                         </div>
                     </div>
                 </div>
@@ -118,17 +132,17 @@
                 <!-- Skill 1 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
                     <i class="fab fa-html5"></i>
-                    <h4>HTML & CSS</h4>
+                    <h4>HTML, CSS & Responsive Design</h4>
                 </div>
                 <!-- Skill 2 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="150">
                     <i class="fab fa-js"></i>
-                    <h4>JavaScript</h4>
+                    <h4>JavaScript (ES6+)</h4>
                 </div>
                 <!-- Skill 3 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="200">
                     <i class="fab fa-cc-visa"></i>
-                    <h4>Canva Affinity Designer</h4>
+                    <h4>UI/UX Design (Canva, Figma)</h4>
                 </div>
                 <!-- Skill 4 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="250">
@@ -138,7 +152,7 @@
                 <!-- Skill 5 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="300">
                     <i class="fas fa-database"></i>
-                    <h4>SQL / NoSQL</h4>
+                    <h4>PHP & MySQL</h4>
                 </div>
                 <!-- Skill 6 -->
                 <div class="skill-card" data-aos="fade-up" data-aos-delay="350">
@@ -159,12 +173,13 @@
                 <!-- Project 1 -->
                 <div class="card" data-aos="fade-up" data-aos-delay="100">
                     <div class="card-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?fit=crop&w=500&h=300"
+                        <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?fit=crop&w=900&h=600"
                             class="card-img" alt="E-commerce">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <span class="tag">React</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">MySQL</span>
                             <span class="tag">Node.js</span>
                         </div>
                         <h3>E-Commerce Platform</h3>
@@ -180,16 +195,20 @@
                 <!-- Project 2 -->
                 <div class="card" data-aos="fade-up" data-aos-delay="200">
                     <div class="card-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?fit=crop&w=500&h=300"
+                        <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?fit=crop&w=900&h=600"
                             class="card-img" alt="Analytics">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <span class="tag">Vue.js</span>
-                            <span class="tag">D3.js</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">MySQL</span>
+                            <span class="tag">JavaScript</span>
                         </div>
-                        <h3>Analytics Dashboard</h3>
-                        <p>Real-time data visualization tool helping businesses make data-driven decisions with ease.
+                        <h3>Escrow & Transaction Management System</h3>
+                        <p>
+                            A secure escrow-based web platform that manages transactions between buyers and sellers.
+                            Includes escrow creation, transaction states, dispute handling logic, and admin controls —
+                            built with scalability and data integrity in mind.
                         </p>
                         <div class="card-links">
                             <a href="#" class="link-icon"><i class="fab fa-github"></i></a>
@@ -201,16 +220,20 @@
                 <!-- Project 3 -->
                 <div class="card" data-aos="fade-up" data-aos-delay="300">
                     <div class="card-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?fit=crop&w=500&h=300"
+                        <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?fit=crop&w=900&h=600"
                             class="card-img" alt="Social App">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <span class="tag">Flutter</span>
-                            <span class="tag">Firebase</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">MySQL</span>
+                            <span class="tag">Bootstrap</span>
                         </div>
-                        <h3>Social Connect App</h3>
-                        <p>A mobile-first social networking app with real-time chat, feed, and story features.</p>
+                        <h3>Client Website & CMS Solution</h3>
+                        <p>
+                            Custom websites built for small businesses and individuals with dynamic content management,
+                            SEO-friendly structure, and performance optimization.
+                        </p>
                         <div class="card-links">
                             <a href="#" class="link-icon"><i class="fab fa-github"></i></a>
                             <a href="#" class="link-icon"><i class="fas fa-external-link-alt"></i></a>
@@ -229,9 +252,10 @@
 
             <div class="contact-wrapper" data-aos="fade-up">
                 <div class="contact-info">
-                    <h3>Let's talk about your project.</h3>
-                    <p class="mb-4" style="color:var(--text-dim); margin-bottom: 2rem;">I'm currently available for
-                        freelance work. If you have a project that needs some creative touch, I'd love to hear about it.
+                    <h3>Have a project or idea? Let’s build it.</h3>
+                    <p class="mb-4" style="color:var(--text-dim); margin-bottom: 2rem;">I’m open to freelance work,
+                        collaborations, and long-term projects.
+                        If you need a developer who understands both tech and business, let’s talk.
                     </p>
 
                     <div class="info-item">
