feat: Replace external profile image links with a local `profile.png` asset.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 </div>
                 <div class="hero-img" data-aos="zoom-in" data-aos-delay="200">
                     <div class="blob-wrapper">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?fit=crop&w=600&h=600"
-                            alt="Profile Picture">
+                        <img src="./img/profile.png" alt="Profile Picture">
                     </div>
                 </div>
             </div>
@@ -85,8 +84,7 @@
 
             <div class="about-grid">
                 <div class="about-img" data-aos="fade-right">
-                    <img src="https://images.unsplash.com/photo-1544717305-2782549b5136?fit=crop&w=600&h=400"
-                        alt="Working">
+                    <img src="./img/profile.png" alt="Working">
                 </div>
                 <div class="about-text" data-aos="fade-left">
                     <h3>Building solutions, not just websites.</h3>
