--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
 
                 <div class="contact-form">
-                    <form action="https://formspree.io/f/amisuusman@gmail.com" method="post">
+                    <form action="https://formspree.io/f/mregbddk" method="post">
                         <div class="form-group">
                             <input type="text" name="name" placeholder="Name" required>
                         </div>
